apps/researcher/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gpt-resercher
  namespace: gpt-researcher
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gpt-resercher
  template:
    metadata:
      labels:
        app: gpt-resercher
    spec:
      imagePullPolicy: Always
      containers:
        - name: gpt-resercher
          image: registry.lumpiasty.xyz/gpt-researcher:latest
          ports:
            - containerPort: 8000
          resources:
            requests:
              cpu: "2"
              memory: "4Gi"
            limits:
              cpu: "3"
              memory: "5Gi"
---
apiVersion: v1
kind: Service
metadata:
  name: gpt-resercher-service
  namespace: gpt-researcher
spec:
  selector:
    app: gpt-resercher
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
