apps/researcher/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: gpt-researcher
  name: researcher
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    acme.cert-manager.io/http01-edit-in-place: "true"
    nginx.ingress.kubernetes.io/proxy-buffering: "false"
    nginx.ingress.kubernetes.io/proxy-read-timeout: 30m
    nginx.org/websocket-services: "gpt-resercher-service"
spec:
  ingressClassName: nginx
  rules:
    - host: researcher.lumpiasty.xyz
      http:
        paths:
          - backend:
              service:
                name: gpt-resercher-service
                port:
                  number: 80
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - researcher.lumpiasty.xyz
      secretName: researcher-ingress
